# Zuwad-app

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  APP_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FAWATERK_FLUTTER_INTEGRATION.md  LIVEKIT_INTEGRATION_SUMMARY.md  README.md  check_elf_alignment.ps1  check_elf_alignment.sh  codemagic.yaml  firebase.json  functions.php  nginx.conf  permission_justification.md  pubspec.yaml  upload-keystore.jks  wordpress_api.php  zuwad.csv
.claude/: settings.local.json
android/: build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
assets/: quran_games.json
assets/audio/: alarm.m4a
assets/images/: Bell.json  Calender.json  alarm.json  lottie.json
installer/: README.md  build_installer.bat  zuwad_setup.iss
ios/: .gitignore  Podfile
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  GoogleService-Info.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/services/: livekit_service.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/firebase_cpp_sdk_windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+101 files in other folders)
