cmake_minimum_required(VERSION 3.14) 
project(firebase_cpp_sdk_windows) 
add_library(firebase_app INTERFACE) 
add_library(firebase_auth INTERFACE) 
add_library(firebase_firestore INTERFACE) 
add_library(firebase_remote_config INTERFACE) 
add_library(firebase_database INTERFACE) 
add_library(firebase_messaging INTERFACE) 
add_library(firebase_storage INTERFACE) 
